apps/media/plex/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels: {}
  strategy:
    type: Recreate
  template:
    metadata:
      labels: {}
    spec:
      securityContext:
        supplementalGroups:
          - 44
          - 103
          - 109
      containers:
        - name: plex
          image: ghcr.io/linuxserver/plex:1.32.0.6950-8521b7d99-ls163
          ports:
            - name: http
              containerPort: 32400
          startupProbe:
            httpGet:
              path: /web/index.html
              port: http
            initialDelaySeconds: 15
            failureThreshold: 60
            timeoutSeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /web/index.html
              port: http
            failureThreshold: 2
            timeoutSeconds: 3
            periodSeconds: 30
          resources:
            requests:
              gpu.intel.com/i915: 1
            limits:
              gpu.intel.com/i915: 1
          volumeMounts:
            - name: data
              mountPath: /config
            - name: backup
              mountPath: /backup
            - name: transcode
              mountPath: /transcode
            - name: media
              mountPath: /media
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: plex-data
        - name: backup
          persistentVolumeClaim:
            claimName: plex-backup
        - name: transcode
          emptyDir:
            medium: Memory
        - name: media
          hostPath:
            path: /mnt/storage
            type: Directory
