apps/media/plex/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  ports:
    - name: http
      port: 32400
      targetPort: http
  type: ClusterIP
